[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scenery/door.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/sprite-sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/scenery/door_collision.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 2 )

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftWall" type="Sprite" parent="."]
position = Vector2( -16, -32 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 16, 224, 16, 32 )

[node name="RightWall" type="Sprite" parent="."]
position = Vector2( 32, -32 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 224, 16, 32 )

[node name="FrameTop" type="Sprite" parent="."]
position = Vector2( 1, -48 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 208, 32, 16 )

[node name="DoorOpen" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 224, 32, 32 )

[node name="DoorClosed" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 80, 224, 32, 32 )

[node name="LeftWallCollision" type="StaticBody2D" parent="."]
position = Vector2( -8, -4 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWallCollision"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="RightWallCollision" type="StaticBody2D" parent="."]
position = Vector2( 40, -4 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWallCollision"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="DoorCollision" type="StaticBody2D" parent="."]
position = Vector2( 16, -4 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorCollision"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )
[connection signal="interacted_with" from="DoorCollision" to="." method="_on_door_interacted_with"]
